# EMBEDDED_ASSIGNMENT

./: CMakeLists.txt  README.md
src/: main.cpp
